--- a/tests/skelet-grids.html
+++ b/tests/skelet-grids.html
@@ -518,16 +518,54 @@
         <x-cell span="3-6">Skelet.</x-cell>
     </x-grid>
 
+    <!-- Subgrid -->
+    <h4 class="h5">Subgrid</h4>
+    <x-grid columns="10" class="cards" style="--gap:3px;--globalRadius:0">
+        <x-subgrid span="10">
+            <x-cell span="5">
+                Skelet.
+            </x-cell>
+            <x-cell span="2">
+                Skelet.
+            </x-cell>
+            <x-cell span="3">
+                Skelet.
+            </x-cell>
+        </x-subgrid>
+
+        <x-subgrid span="10">
+            <x-cell span="5" span-y="2">Skelet.</x-cell>
+            <x-cell span="3">Skelet.</x-cell>
+            <x-cell span="2">Skelet.</x-cell>
+            <x-cell span="2">Skelet.</x-cell>
+            <x-cell span="3">Skelet.</x-cell>
+        </x-subgrid>
+        
+        <x-cell span="row">Subgrid divider</x-cell>
+
+        <x-subgrid span="10">
+            <x-cell span="1+2" span-y="1-3">Skelet.</x-cell>
+            <x-cell span="3+2">Skelet.</x-cell>
+            <x-cell span="5+4">Skelet.</x-cell>
+            <x-cell span="9+2">Skelet.</x-cell>
+    
+            <x-cell span="3+4">Skelet.</x-cell>
+            <x-cell span="7+4" span-y="2-3">Skelet.</x-cell>
+            <x-cell span="3-6">Skelet.</x-cell>
+        </x-subgrid>
+
+    </x-grid>
+
     </section>
 
     <footer>
         <x-grid class="type2" columns="3" columns-s="1">
             <x-cell>
                 <small>Get started with</small>
-                <div class="h4"><a href="https://selekkt.dk/skelet/v3" class="no-style" target="_blank">Skelet.css</a></div>
+                <div class="h4"><a href="https://selekkt.dk/skelet/" class="no-style" target="_blank">Skelet.css</a></div>
             </x-cell>
             <x-cell>
-                <small>&copy; 2022. All rights reserved</small>
+                <small>&copy; 2025. All rights reserved</small>
                 <div class="h4">Sēlekkt. studio</div>
             </x-cell>
             <x-cell ps="end" ps-s="start">
