--- a/tests/toggle-token.html
+++ b/tests/toggle-token.html
@@ -18,28 +18,28 @@
     <fieldset class="toggle-token" x-flex>
         <legend>Ramen type</legend>
 
-            <label tabindex="0">
-                <input type="radio" name="ramen_type" checked>
+            <label tabindex="-1">
+                <input type="radio" name="ramen_type" role="switch" value="Tonkotsu" checked>
                 <span>Tonkotsu</span>
             </label>
 
-            <label tabindex="0">
-                <input type="radio" name="ramen_type">
+            <label tabindex="-1">
+                <input type="radio" name="ramen_type" role="switch" value="Shōyū">
                 <span>Shōyū</span>
             </label>
 
-            <label tabindex="0">
-                <input type="radio" name="ramen_type">
+            <label tabindex="-1">
+                <input type="radio" name="ramen_type" role="switch" value="Miso">
                 <span>Miso</span>
             </label>
 
-            <label tabindex="0">
-                <input type="radio" name="ramen_type">
+            <label tabindex="-1">
+                <input type="radio" name="ramen_type" role="switch" value="Shio">
                 <span>Shio</span>
             </label>
 
-            <label tabindex="0">
-                <input type="radio" name="ramen_type">
+            <label tabindex="-1">
+                <input type="radio" name="ramen_type" role="switch" value="Abura soba">
                 <span>Abura soba</span>
             </label>
 
@@ -50,47 +50,47 @@
     <fieldset class="toggle-token" x-flex>
         <legend>Ramen toppings</legend>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="checkbox">
                 <span>Wakame</span>
             </label>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="checkbox">
                 <span>Moyashi</span>
             </label>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="checkbox">
                 <span>Seaweed</span>
             </label>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="checkbox">
                 <span>Green onions</span>
             </label>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="checkbox" disabled>
                 <span>Kikurage</span>
             </label>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="checkbox">
                 <span>Naruto</span>
             </label>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="checkbox">
                 <span>Hard boiled egg</span>
             </label>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="checkbox" disabled>
                 <span>Corn</span>
             </label>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="checkbox">
                 <span>Grilled pork</span>
             </label>
@@ -102,17 +102,17 @@
     <fieldset class="toggle-token" x-flex>
         <legend>Checkout</legend>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="radio" name="checkout">
                 <span>Eat here</span>
             </label>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="radio" name="checkout" checked>
                 <span>Take-away</span>
             </label>
 
-            <label tabindex="0">
+            <label tabindex="-1">
                 <input type="radio" name="checkout">
                 <span>Delivery</span>
             </label>
@@ -147,36 +147,23 @@
     <fieldset class="toggle-token custom" x-flex>
         <legend>Custom .toggle-token</legend>
 
-            <label tabindex="0">
-                <input type="radio" name="checkout">
+            <label tabindex="-1">
+                <input type="radio" name="checkout" role="switch" value="Eat here">
                 <span>Eat here</span>
             </label>
 
-            <label tabindex="0">
-                <input type="radio" name="checkout" checked>
+            <label tabindex="-1">
+                <input type="radio" name="checkout" role="switch" value="Take-away" checked>
                 <span>Take-away</span>
             </label>
 
-            <label tabindex="0">
-                <input type="radio" name="checkout" disabled>
+            <label tabindex="-1">
+                <input type="radio" name="checkout" role="switch" value="Delivery" disabled>
                 <span>Delivery</span>
             </label>
 
     </fieldset>
 </div>
-
-<h1>The dialog element</h1>
-
-<p>This is some text.</p>
-
-<p>This is some text.</p>
-
-<dialog open>This is an open dialog window</dialog>
-
-<p>This is some text.</p>
-
-<p>This is some text.</p>
-
 
 </body>
 </html>
